[metadata]
name = mado
summary = RFB Viewer
description-file =
    README.md
author = ericwb
home-page = https://bandit.readthedocs.io/en/latest/
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
project_urls =
    Release notes = https://github.com/PyCQA/bandit/releases

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  examples*
