[metadata]
name = mado
summary = RFB Console
description-file =
    README.md
author = ericwb
home-page = https://mado.readthedocs.io/en/latest/
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
project_urls =
    Release notes = https://github.com/ericwb/mado/releases

[entry_points]
gui_scripts =
    mado = mado.ui.app:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
